# Co-table-application

./: .env.sample  .gitignore  Jenkinsfile  README.md  pyproject.toml
co_table/: config.py  deps.py  main.py  security.py
co_table/models/: __init__.py  dbmodel.py  reservation.py  room.py  table.py  user.py
co_table/routers/: __init__.py  authentication.py  reservation.py  room.py  root.py  table.py  user.py
scripts/: __init__.py  initial-db.py  run-api.bat
tests/: conftest.py  test_reservation.py  test_room.py  test_table.py
