[tool.poetry]
name = "co-table"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.112.2"
pg8000 = "^1.31.2"
sqlmodel = "^0.0.21"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"
locust = "^2.31.4"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.8.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
